--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,5 +13,23 @@ if (NOT VCPKG_PATH)
     message(FATAL_ERROR "Set VCPKG_PATH environment variable")
 endif()
 
-add_library(loop-optimize STATIC src/loop_optimize.cpp)
-target_include_directories(loop-optimize PUBLIC 3rd-party/libsimdpp/)
+if(OSX OR LINUX)
+    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -W -Wall")
+	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -W -Wall")
+
+    #include vcpkg toolchain and add include dirs
+    include(${VCPKG_PATH}/scripts/buildsystems/vcpkg.cmake)
+    include_directories(${VCPKG_PATH}/installed/x64-osx/include)
+
+    find_package(GTest REQUIRED)
+    if (NOT GTest_FOUND)
+        message(ERROR "GTest not found.")
+    endif()
+endif()
+
+add_library(loop_optimize STATIC src/loop_optimize.cpp)
+target_include_directories(loop_optimize PUBLIC 3rd-party/libsimdpp/)
+
+add_executable(test_loop_optimize test/test_loop_optimize.cpp)
+target_include_directories(test_loop_optimize PUBLIC src)
+target_link_libraries(test_loop_optimize PUBLIC GTest::GTest GTest::Main loop_optimize)
